# WSM_project1

./: .gitignore  README.md  main.py  preprocess.py  pyproject.toml
lib/: porterStemmer.py  preprocess.py  vectorSpace.py
utils/: BiDirectionalDict.py  io.py  math.py
