[tool.poetry]
name = "project1"
version = "0.1.0"
description = "WSM Project 1 - 110703051"
authors = ["timsu92 <33785401+timsu92@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nltk = "^3.9.1"
numpy = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
