[tool.poetry]
name = "project1"
version = "0.1.0"
description = "WSM Project 1 - 110703051"
authors = ["timsu92 <33785401+timsu92@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.23.5"
tensorflow = "~2.15.0"
ckiptagger = "^0.2.1"
nltk = "^3.9.1"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
